# grnl-web-sensors-prov-esp-sdk

./: CMakeLists.txt  Makefile  README.md  partitions.csv  sdkconfig  sdkconfig.defaults
components/json/: CMakeLists.txt  json.c
components/json/include/: json.h
components/mqtt_service/: CMakeLists.txt  mqtt_interpret.c  mqtt_service.c
components/mqtt_service/include/: mqtt_service.h
components/ntp_client/: CMakeLists.txt  ntp_client.c
components/ntp_client/include/: ntp_client.h
components/ota/: CMakeLists.txt  ota.c
components/ota/include/: ota.h
components/ota/server_certs/: ca_cert.pem
components/sim800/: CMakeLists.txt  sim800.c
components/sim800/include/: sim800.h
components/storage/: CMakeLists.txt  storage.c
components/storage/include/: storage.h
components/webserver/: CMakeLists.txt  teste.c  webserver.c
components/webserver/include/: webserver.h
components/wifi/: CMakeLists.txt  wifi_ap.c  wifi_sta.c
components/wifi/include/: wifi.h
config/: hardware.json  mqtt.json  products.json
html/: CONTAGEM_DADOSONLINE.html  comunicacao.html  config.json  dadosonline.html  index.html  inforede.html  medidor.html  transmissao.html
html/css/: style.css
main/: CMakeLists.txt  Kconfig.projbuild  main.c
main/include/: define.h
modules/module_temperature/: CMakeLists.txt
modules/module_temperature/include/: temperature.h
modules/module_triac/: temperature.c
